--- a/Billing/billing.html
+++ b/Billing/billing.html
@@ -71,6 +71,59 @@
             </div>
         </div>
     </div>
+
+    <!-- Calculator Modal -->
+    <div class="modal fade" id="calculatorModal" tabindex="-1" aria-labelledby="calculatorModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="calculatorModalLabel">Calculator</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="calcDisplay" class="form-control mb-3" readonly value="0">
+                    <div class="calculator-buttons">
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="clearDisplay()">C</button></div>
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="backspace()">⌫</button></div>
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="toggleHistory()">H</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('/')">/</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('7')">7</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('8')">8</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('9')">9</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('*')">*</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('4')">4</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('5')">5</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('6')">6</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('-')">-</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('1')">1</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('2')">2</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('3')">3</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('+')">+</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('0')">0</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('.')">.</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('%')">%</button></div>
+                            <div class="col-3"><button class="btn btn-success w-100 mb-2" onclick="calculateResult()">=</button></div>
+                        </div>
+                        <div id="calcHistoryBlock" class="calculator-history mt-3" style="display: none;">
+                            <h5>History</h5>
+                            <ul id="calcHistory" class="list-group"></ul>
+                        </div>
+                    </div>
+                    <button class="btn btn-danger w-100 mt-3" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="billing.js"></script>
 </body>
