All working well now

--- a/Admin/Sales/sales.html
+++ b/Admin/Sales/sales.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0/dist/chartjs-plugin-datalabels.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="sales.css">
 </head>
 <body class="bg-gray-100 font-sans">
     <div class="container mx-auto p-6">
@@ -31,6 +31,6 @@
         <!-- Transactions List -->
         <div id="transactions" class="space-y-4"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="sales.js"></script>
 </body>
 </html>
