--- a/Billing/Udhari/udhari.html
+++ b/Billing/Udhari/udhari.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Calibri:wght@400;500;600&display=swap"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="udhari.css" />
   </head>
   <body>
     <div class="container">
@@ -162,6 +162,6 @@
       </button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="udhari.js"></script>
   </body>
 </html>
