--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <img src="logo.png" alt="RetailAI Logo">
       <span>RetailAI</span>
     </div>
-    <div class="settings" onclick="location.href='./Billing/billing.html'">
+    <div class="settings" onclick="location.href='./Billing/POS/pos.html'">
       <img src="settings.png" alt="Settings">
     </div>
   </header>
 
   <main class="center-buttons">
-    <button onclick="location.href='./Billing/billing.html'">Billing</button>
-    <button onclick="location.href='./Inventory/inventory.html'">Purchase</button>
-    <button onclick="location.href='dashboard.html'">Admin</button>
+    <button onclick="location.href='./Billing/POS/pos.html'">Billing</button>
+    <button onclick="location.href='./Inventory/InventoryList/inventory.html'">Purchase</button>
+    <button onclick="location.href='./Admin/Sales/sales.html'">Admin</button>
   </main>
   
 </body>
