--- a/Billing/POS/pos.html
+++ b/Billing/POS/pos.html
@@ -6,7 +6,7 @@
     <title>Billing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="billing.css">
+    <link rel="stylesheet" href="pos.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -14,25 +14,28 @@
         <div class="container-fluid">
             <div class="navbar-nav w-100 justify-content-between">
                 <button class="btn btn-outline-primary nav-btn" data-key="F1" onclick="createNewTab()">
-                    <img src="f1.png" alt="New Tab" class="nav-icon"> F1 - New Tab
+                    <img src="./../public/F1.png" alt="New Tab" class="nav-icon"> F1 - New Tab
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F2" onclick="navigateTo('billing_history.html')">
-                    <img src="f2.png" alt="Billing History" class="nav-icon"> F2 - Billing History
+                <button class="btn btn-outline-primary nav-btn" data-key="F2" onclick="navigateTo('Billing/BillingHistory/billingHistory.html')">
+                    <img src="./../public/F2.png" alt="Billing History" class="nav-icon"> F2 - Billing History
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F4" onclick="navigateTo('udhari.html')">
-                    <img src="f4.png" alt="Udhari" class="nav-icon"> F4 - Udhari
+                <button class="btn btn-outline-primary nav-btn" data-key="F3" onclick="openCalculator()">
+                    <img src="./../public/F3.png" alt="Calculator" class="nav-icon"> F3 - Calculator
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F5" onclick="navigateTo('customers.html')">
-                    <img src="f5.png" alt="Customers" class="nav-icon"> F5 - Customers
+                <button class="btn btn-outline-primary nav-btn" data-key="F4" onclick="navigateTo('Billing/Udhari/udhari.html')">
+                    <img src="./../public/F4.png" alt="Udhari" class="nav-icon"> F4 - Udhari
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F6" onclick="navigateTo('returns.html')">
-                    <img src="f6.png" alt="Return/Refunds" class="nav-icon"> F6 - Return/Refunds
+                <button class="btn btn-outline-primary nav-btn" data-key="F5" onclick="navigateTo('Billing/Customers/customers.html')">
+                    <img src="./../public/F5.png" alt="Customers" class="nav-icon"> F5 - Customers
+                </button>
+                <button class="btn btn-outline-primary nav-btn" data-key="F6" onclick="navigateTo('Billing/Returns/returns.html')">
+                    <img src="./../public/F6.png" alt="Return/Refunds" class="nav-icon"> F6 - Return/Refunds
                 </button>
                 <button class="btn btn-outline-success nav-btn" data-key="F7" onclick="saveAndPrintBill()">
-                    <img src="f7.png" alt="Print Bill" class="nav-icon"> F7 - Print Bill
+                    <img src="./../public/F7.png" alt="Print Bill" class="nav-icon"> F7 - Print Bill
                 </button>
                 <button class="btn btn-outline-danger nav-btn" data-key="F8" onclick="navigateTo('index.html')">
-                    <img src="f8.png" alt="Exit" class="nav-icon"> F8 - Exit
+                    <img src="./../public/F8.png" alt="Exit" class="nav-icon"> F8 - Exit
                 </button>
             </div>
         </div>
@@ -159,7 +162,59 @@
         </div>
     </div>
 
+    
+    <!-- Calculator Modal -->
+    <div class="modal fade" id="calculatorModal" tabindex="-1" aria-labelledby="calculatorModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="calculatorModalLabel">Calculator</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="text" id="calcDisplay" class="form-control mb-3" readonly value="0">
+                    <div class="calculator-buttons">
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="clearDisplay()">C</button></div>
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="backspace()">⌫</button></div>
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="toggleHistory()">H</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('/')">/</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('7')">7</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('8')">8</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('9')">9</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('')"></button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('4')">4</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('5')">5</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('6')">6</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('-')">-</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('1')">1</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('2')">2</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('3')">3</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('+')">+</button></div>
+                        </div>
+                        <div class="row">
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('0')">0</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('.')">.</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('%')">%</button></div>
+                            <div class="col-3"><button class="btn btn-success w-100 mb-2" onclick="calculateResult()">=</button></div>
+                        </div>
+                        <div id="calcHistoryBlock" class="calculator-history mt-3" style="display: none;">
+                            <h5>History</h5>
+                            <ul id="calcHistory" class="list-group"></ul>
+                        </div>
+                    </div>
+                    <button class="btn btn-danger w-100 mt-3" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="billing.js"></script>
+    <script src="pos.js"></script>
 </body>
 </html>
