--- a/Billing/POS/pos.html
+++ b/Billing/POS/pos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="pos.css">
 </head>
+
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -16,23 +18,27 @@
                 <button class="btn btn-outline-primary nav-btn" data-key="F1" onclick="createNewTab()">
                     <img src="./../public/F1.png" alt="New Tab" class="nav-icon"> F1 - New Tab
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F2" onclick="navigateTo('Billing/BillingHistory/billingHistory.html')">
+                <button class="btn btn-outline-primary nav-btn" data-key="F2"
+                    onclick="navigateTo('Billing/BillingHistory/billingHistory.html')">
                     <img src="./../public/F2.png" alt="Billing History" class="nav-icon"> F2 - Billing History
                 </button>
                 <button class="btn btn-outline-primary nav-btn" data-key="F3" onclick="openCalculator()">
                     <img src="./../public/F3.png" alt="Calculator" class="nav-icon"> F3 - Calculator
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F4" onclick="navigateTo('Billing/Udhari/udhari.html')">
+                <button class="btn btn-outline-primary nav-btn" data-key="F4"
+                    onclick="navigateTo('Billing/Udhari/udhari.html')">
                     <img src="./../public/F4.png" alt="Udhari" class="nav-icon"> F4 - Udhari
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F5" onclick="navigateTo('Billing/Customers/customers.html')">
+                <button class="btn btn-outline-primary nav-btn" data-key="F5"
+                    onclick="navigateTo('Billing/Customers/customers.html')">
                     <img src="./../public/F5.png" alt="Customers" class="nav-icon"> F5 - Customers
                 </button>
-                <button class="btn btn-outline-primary nav-btn" data-key="F6" onclick="navigateTo('Billing/Returns/returns.html')">
+                <button class="btn btn-outline-primary nav-btn" data-key="F6"
+                    onclick="navigateTo('Billing/Returns/returns.html')">
                     <img src="./../public/F6.png" alt="Return/Refunds" class="nav-icon"> F6 - Return/Refunds
                 </button>
                 <button class="btn btn-outline-success nav-btn" data-key="F7" onclick="saveAndPrintBill()">
-                    <img src="./../public/F7.png" alt="Print Bill" class="nav-icon"> F7 - Print Bill
+                    <img src="./../public/F7.html"> F7 - Print Bill
                 </button>
                 <button class="btn btn-outline-danger nav-btn" data-key="F8" onclick="navigateTo('index.html')">
                     <img src="./../public/F8.png" alt="Exit" class="nav-icon"> F8 - Exit
@@ -53,7 +59,8 @@
                 <h1 class="mb-0">Billing - Items</h1>
                 <div class="customer-search-container">
                     <div class="search-container">
-                        <input type="text" id="customerSearchInput" class="form-control" placeholder="Search Customer..." autocomplete="off">
+                        <input type="text" id="customerSearchInput" class="form-control"
+                            placeholder="Search Customer..." autocomplete="off">
                         <div id="customerSuggestions" class="suggestions"></div>
                     </div>
                     <div class="customer-details d-flex mt-2">
@@ -65,7 +72,8 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <div class="search-container mb-3">
-                        <input type="text" id="searchInput" class="form-control" placeholder="Search by Barcode or Name..." autocomplete="off">
+                        <input type="text" id="searchInput" class="form-control"
+                            placeholder="Search by Barcode or Name..." autocomplete="off">
                         <div id="suggestions" class="suggestions"></div>
                     </div>
                     <table id="itemsTable" class="table table-striped">
@@ -93,8 +101,18 @@
                     <div class="billing-details">
                         <p>Cost: <span id="cost">₹0.00</span></p>
                         <div class="input-group mb-2">
-                            <label for="discount">Discount:</label>
-                            <input type="number" id="discount" min="0" step="0.01" class="form-control" value="0">
+                            <label for="discount" class="d-block w-100">Discount</label>
+                            <div class="discount-container d-flex align-items-center">
+                                <input type="number" id="discount" min="0" step="0.01" oninput="calculateTotals()"
+                                    placeholder="Enter discount" class="form-control me-2" style="flex: 1;" />
+                                <div class="discount-toggle d-flex align-items-center">
+                                    <label class="switch me-2">
+                                        <input type="checkbox" id="discountType" onchange="calculateTotals()" />
+                                        <span class="slider round"></span>
+                                    </label>
+                                    <label for="discountType" class="m-0">Percentage</label>
+                                </div>
+                            </div>
                         </div>
                         <p>GST: <span id="gst">₹0.00</span></p>
                         <p>Total Cost: <span id="totalCost">₹0.00</span></p>
@@ -105,10 +123,11 @@
                     <div class="payment-details">
                         <div class="input-group mb-2">
                             <label for="paymentMethod">Payment Method:</label>
-                            <select id="paymentMethod" class="form-control">
+                            <select id="paymentMethod" class="form-control" onchange="handlePaymentMethodChange()">
                                 <option value="Cash">Cash</option>
                                 <option value="Card">Card</option>
                                 <option value="Online">Online</option>
+                                <option value="Udhari">Udhari</option>
                             </select>
                         </div>
                         <div class="input-group mb-2">
@@ -121,10 +140,10 @@
                 </div>
             </div>
         </div>
-    </div>
 
     <!-- Calculator Modal -->
-    <div class="modal fade" id="calculatorModal" tabindex="-1" aria-labelledby="calculatorModalLabel" aria-hidden="true">
+    <div class="modal fade" id="calculatorModal" tabindex="-1" aria-labelledby="calculatorModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -135,34 +154,54 @@
                     <input type="text" id="calcDisplay" class="form-control mb-3" readonly value="0">
                     <div class="calculator-buttons">
                         <div class="row">
-                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="clearDisplay()">C</button></div>
-                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="backspace()">⌫</button></div>
-                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2" onclick="toggleHistory()">H</button></div>
-                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('/')">/</button></div>
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2"
+                                    onclick="clearDisplay()">C</button></div>
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2"
+                                    onclick="backspace()">⌫</button></div>
+                            <div class="col-3"><button class="btn btn-secondary w-100 mb-2"
+                                    onclick="toggleHistory()">H</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2"
+                                    onclick="appendToDisplay('/')">/</button></div>
                         </div>
                         <div class="row">
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('7')">7</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('8')">8</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('9')">9</button></div>
-                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('*')">*</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('7')">7</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('8')">8</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('9')">9</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2"
+                                    onclick="appendToDisplay('*')">*</button></div>
                         </div>
                         <div class="row">
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('4')">4</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('5')">5</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('6')">6</button></div>
-                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('-')">-</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('4')">4</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('5')">5</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('6')">6</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2"
+                                    onclick="appendToDisplay('-')">-</button></div>
                         </div>
                         <div class="row">
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('1')">1</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('2')">2</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('3')">3</button></div>
-                            <div class="col-3"><button class="btn btn-primary w-100 mb-2" onclick="appendToDisplay('+')">+</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('1')">1</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('2')">2</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('3')">3</button></div>
+                            <div class="col-3"><button class="btn btn-primary w-100 mb-2"
+                                    onclick="appendToDisplay('+')">+</button></div>
                         </div>
                         <div class="row">
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('0')">0</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('.')">.</button></div>
-                            <div class="col-3"><button class="btn btn-light w-100 mb-2" onclick="appendToDisplay('%')">%</button></div>
-                            <div class="col-3"><button class="btn btn-success w-100 mb-2" onclick="calculateResult()">=</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('0')">0</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('.')">.</button></div>
+                            <div class="col-3"><button class="btn btn-light w-100 mb-2"
+                                    onclick="appendToDisplay('%')">%</button></div>
+                            <div class="col-3"><button class="btn btn-success w-100 mb-2"
+                                    onclick="calculateResult()">=</button></div>
                         </div>
                         <div id="calcHistoryBlock" class="calculator-history mt-3" style="display: none;">
                             <h5>History</h5>
@@ -178,4 +217,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="pos.js"></script>
 </body>
+
 </html>
