--- a/Billing/Udhari/udhari.html
+++ b/Billing/Udhari/udhari.html
@@ -10,6 +10,10 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Calibri:wght@400;500;600&display=swap"
     />
     <link rel="stylesheet" href="udhari.css" />
@@ -18,11 +22,7 @@
     <div class="container">
       <header>
         <h1><i class="fas fa-book"></i> Udhari Book</h1>
-        <button
-          id="themeToggle"
-          class="btn btn-secondary"
-          onclick="toggleTheme()"
-        >
+        <button id="themeToggle" class="btn btn-secondary">
           <i class="fas fa-moon"></i> Toggle Theme
         </button>
       </header>
@@ -48,67 +48,52 @@
 
       <!-- Filter and Action Section -->
       <section class="filter-section card">
-        <div class="filter-group">
-          <input
-            type="text"
-            id="searchInput"
-            placeholder="Search by customer name..."
-            onkeyup="applyFilters()"
-          />
-        </div>
-        <div class="filter-group">
-          <input type="date" id="dateFilter" onchange="applyFilters()" />
-        </div>
-        <div class="filter-group">
-          <select id="statusFilter" onchange="applyFilters()">
-            <option value="all">All Statuses</option>
-            <option value="Paid">Completed (Paid)</option>
-            <option value="Pending">Pending</option>
-            <option value="Partial">Partial</option>
-            <option value="Settled">Settled</option>
-          </select>
-        </div>
-        <div class="filter-group">
-          <select id="sortOption" onchange="applySort()">
-            <option value="">Sort By</option>
-            <option value="totalAsc">Total Amount (Lowest to Highest)</option>
-            <option value="totalDesc">Total Amount (Highest to Lowest)</option>
-            <option value="remainingAsc">
-              Remaining Amount (Lowest to Highest)
-            </option>
-            <option value="remainingDesc">
-              Remaining Amount (Highest to Lowest)
-            </option>
-            <option value="dateAsc">Date (Oldest to Newest)</option>
-            <option value="dateDesc">Date (Newest to Oldest)</option>
-            <option value="nameAsc">Customer Name (A to Z)</option>
-            <option value="nameDesc">Customer Name (Z to A)</option>
-            <option value="statusAsc">Status (A to Z)</option>
-            <option value="statusDesc">Status (Z to A)</option>
-          </select>
-        </div>
-        <div class="action-buttons">
-          <button onclick="exportToCSV()" class="btn btn-secondary">
-            <i class="fas fa-download"></i> Export to CSV
-          </button>
-          <button onclick="clearAllData()" class="btn btn-danger">
-            <i class="fas fa-trash-alt"></i> Clear All Data
-          </button>
+        <div class="filter-container">
+          <div class="filter-group">
+            <input
+              type="text"
+              id="searchInput"
+              placeholder="Search by customer name..."
+              oninput="applyFilters()"
+            />
+          </div>
+          <div class="filter-group">
+            <input type="date" id="dateFilter" onchange="applyFilters()" />
+          </div>
+          <div class="filter-group">
+            <select id="statusFilter" onchange="applyFilters()">
+              <option value="all">All Customers</option>
+              <option value="debt">Has Debt</option>
+              <option value="noDebt">No Debt</option>
+            </select>
+          </div>
+          <div class="filter-group">
+            <select id="sortOption" onchange="applyFilters()">
+              <option value="nameAsc">Name (A-Z)</option>
+              <option value="nameDesc">Name (Z-A)</option>
+              <option value="udhariAsc">Udhari (Low to High)</option>
+              <option value="udhariDesc">Udhari (High to Low)</option>
+            </select>
+          </div>
+          <div class="action-buttons">
+            <button onclick="exportToCSV()" class="btn btn-secondary">
+              <i class="fas fa-download"></i> Export to CSV
+            </button>
+            <button onclick="clearAllData()" class="btn btn-danger">
+              <i class="fas fa-trash-alt"></i> Clear All Data
+            </button>
+          </div>
         </div>
       </section>
 
-      <!-- Udhari Table -->
+      <!-- Customer Table -->
       <section class="table-section card">
         <table class="udhari-table" id="udhariTable">
           <thead>
             <tr>
               <th>Customer Name</th>
-              <th>Total Amount (₹)</th>
-              <th>Paid Amount (₹)</th>
-              <th>Remaining (₹)</th>
-              <th>Date</th>
-              <th>Transactions</th>
-              <th>Status</th>
+              <th>Mobile Number</th>
+              <th>Total Udhari (₹)</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -139,18 +124,38 @@
             placeholder="E.g., Paid via cash"
           ></textarea>
         </div>
-        <button onclick="submitPayment()" class="btn btn-success">
-          Submit Payment
-        </button>
+        <div class="modal-actions">
+          <button onclick="submitPayment()" class="btn btn-success">
+            Submit Payment
+          </button>
+          <button onclick="closeModal('paymentModal')" class="btn btn-secondary">
+            Cancel
+          </button>
+        </div>
       </div>
     </div>
 
-    <!-- Modal for Transaction History -->
-    <div id="historyModal" class="modal">
+    <!-- Modal for Bill Details -->
+    <div id="billDetailsModal" class="modal">
       <div class="modal-content">
-        <span class="close-btn" onclick="closeModal('historyModal')">×</span>
-        <h3>Transaction History</h3>
-        <ul id="historyList" class="history-list"></ul>
+        <span class="close-btn" onclick="closeModal('billDetailsModal')">×</span>
+        <h3>Bill Details</h3>
+        <table class="bill-details-table">
+          <thead>
+            <tr>
+              <th>Item Name</th>
+              <th>Quantity</th>
+              <th>Price (₹)</th>
+              <th>Total (₹)</th>
+            </tr>
+          </thead>
+          <tbody id="billDetailsTableBody"></tbody>
+        </table>
+        <div class="modal-actions">
+          <button onclick="closeModal('billDetailsModal')" class="btn btn-secondary">
+            Close
+          </button>
+        </div>
       </div>
     </div>
 
@@ -162,6 +167,7 @@
       </button>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="udhari.js"></script>
   </body>
 </html>
