Added Search Bar in Billing History Interface

--- a/Billing/BillingHistory/billingHistory.html
+++ b/Billing/BillingHistory/billingHistory.html
@@ -11,6 +11,7 @@
     <h1>Billing History</h1>
     <div class="search-bar">
       <input type="text" id="searchInput" placeholder="Search by Bill ID...">
+      <input type="text" id="searchByNameMobile" placeholder="Search by Customer Name or Mobile...">
     </div>
     <div class="billing-list">
       <table id="billsTable">
